<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LobbyFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="323dp"
        android:layout_height="323dp"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:background="@drawable/logo"
        android:contentDescription="@string/logo" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginStart="333dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/settingsbutton" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center|bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp">

        <Button
            android:id="@+id/button_ongoinggames"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@drawable/button_white"
            android:layout_marginBottom="15dp"
            android:text="Ongoing Games"/>

        <Button
            android:id="@+id/button_addfriend"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@drawable/button_white"
            android:text="@string/addafriend"
            android:layout_marginBottom="15dp" />

        <Button
            android:id="@+id/button_playw_friend"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@drawable/button_white"
            android:text="@string/playwithFriend"
            android:layout_marginBottom="15dp" />

        <Button
            android:id="@+id/button_playw_random"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@drawable/button_white"
            android:text="@string/playwithrandom"
            android:layout_marginBottom="15dp" />

        <Button
            android:id="@+id/button_stats"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@drawable/button_white"
            android:text="@string/statistic"
            android:layout_marginBottom="15dp" />

        <Button
            android:id="@+id/button_rules"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@drawable/button_white"
            android:text="@string/rules"
            android:layout_marginBottom="15dp" />

    </LinearLayout>

</FrameLayout>