<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background" />

    <View
        android:id="@+id/logo"
        android:layout_width="323dp"
        android:layout_height="323dp"
        android:layout_marginTop="?actionBarSize"
        android:background="@drawable/logo"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/text_username"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:background="@drawable/button_white"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:hint="@string/username"
            android:inputType="text"
            android:autofillHints="@string/username" />

        <EditText
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:background="@drawable/button_white"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="@string/password" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:background="@drawable/button_black"
            android:layout_margin="10dp"
            android:text="@string/log_in"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:background="@drawable/button_black"
            android:layout_margin="10dp"
            android:text="@string/sign_up"
            android:textColor="#ffffff" />
    </LinearLayout>

</FrameLayout>