<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background" />

    <View
        android:id="@+id/logo"
        android:layout_width="323dp"
        android:layout_height="323dp"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:background="@drawable/logo"
        />

    <ImageView
        android:id="@+id/btn_capture_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:src="@drawable/rectangle"
        android:contentDescription="@string/rectangle"
        />

    <Button
        android:id="@+id/button_backfromaddfr"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="40dp"
        android:background="@drawable/ic_arrow_back_black_24dp" />

    <TextView
        android:id="@+id/statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_mono_medium"
        android:text="@string/add_a_friend"
        android:textSize="20sp"
        android:textColor="#000000"
        android:gravity="top"
        />

    <View
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="170dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/plus" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical">

    <EditText
        android:id="@+id/text_username"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_margin="10dp"
        android:autofillHints="@string/username"
        android:background="@drawable/button_white"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="12dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp" />

    <Button
        android:id="@+id/button_add"
        android:layout_gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_margin="10dp"
        android:background="@drawable/button_black"
        android:text="@string/add"
        android:textStyle="bold"
        android:textColor="#ffffff" />

    </LinearLayout>


</FrameLayout>