<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LobbyFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background"
        />

    <View
        android:id="@+id/logo"
        android:layout_width="323dp"
        android:layout_height="323dp"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:background="@drawable/logo"
        />

    <ImageView
        android:id="@+id/btn_capture_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:src="@drawable/rectangle"
        android:contentDescription="@string/rectangle"
        />

    <Button
        android:id="@+id/button_backfromplaywfr"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="40dp"
        android:background="@drawable/ic_arrow_back_black_24dp" />


    <TextView
        android:id="@+id/Playw_Friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_mono_medium"
        android:gravity="top"
        android:text="@string/choose_a_friend"
        android:textColor="#000000"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="74dp"
        android:layout_marginTop="170dp"
        android:layout_marginStart="50dp"
        android:src="@drawable/playwithafriend"
        android:contentDescription="@string/stats"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="110dp">

    </androidx.recyclerview.widget.RecyclerView>

</FrameLayout>