<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LobbyFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background" />

    <View
        android:id="@+id/logo"
        android:layout_width="323dp"
        android:layout_height="323dp"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:background="@drawable/logo"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="110dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/yourCorrectAnswers"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:autofillHints="@string/username"
            android:background="@drawable/button_green"
            android:fontFamily="@font/archivo_black"
            android:gravity="center"
            android:hint="correct answers"
            android:padding="10dp"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/opponentCorrectAnswers"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:autofillHints="@string/username"
            android:background="@drawable/button_red"
            android:fontFamily="@font/archivo_black"
            android:gravity="center"
            android:hint="false answers"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="30dp" />

        <Button
            android:id="@+id/button_statt"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@drawable/button_white"
            android:layout_margin="10dp"
            android:text="@string/statistic"/>

        <Button
            android:id="@+id/button_lobby"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@drawable/button_white"
            android:layout_margin="10dp"
            android:text="@string/back_to_lobby"/>

    </LinearLayout>

</FrameLayout>