<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LobbyFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background"
        />

    <View
        android:id="@+id/logo"
        android:layout_width="323dp"
        android:layout_height="323dp"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:background="@drawable/logo"
        />

    <ImageView
        android:id="@+id/btn_capture_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:src="@drawable/rectangle"
        android:contentDescription="@string/rectangle"
        />

    <Button
        android:id="@+id/backButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/ic_arrow_back_black_24dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:text="@string/ongoing_games"
        android:textSize="20sp"
        android:textColor="#000000"
        android:gravity="top"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewongoingGames"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="bottom"
        android:layout_margin="25dp">

    </androidx.recyclerview.widget.RecyclerView>

</FrameLayout>