<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background"
            android:scaleType="centerCrop"
            android:contentDescription="@string/background"
            />

        <View
            android:id="@+id/logo"
            android:layout_width="323dp"
            android:layout_height="323dp"
            android:layout_marginTop="?android:attr/actionBarSize"
            android:background="@drawable/logo"
            />

        <ImageView
            android:id="@+id/btn_capture_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:src="@drawable/rectangle"
            android:contentDescription="@string/rectangle"
            />

        <Button
            android:id="@+id/button_backfromsett"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="40dp"
            android:background="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="top"
            android:text="@string/settings"
            android:textSize="20sp"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_marginTop="110dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton12"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:background="?android:attr/panelBackground"
                app:srcCompat="@drawable/accountsettings" />

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:background="?android:attr/panelBackground"
                app:srcCompat="@drawable/notificationssettings" />

            <Switch
                android:id="@+id/soundswitch"
                android:layout_width="319dp"
                android:layout_height="39dp"
                android:background="?android:attr/panelBackground"
                android:text="             Sound"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/imageButton13"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:background="?android:attr/panelBackground"
                app:srcCompat="@drawable/privacysettings" />

            <ImageButton
                android:id="@+id/imageButton14"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:background="?android:attr/panelBackground"
                app:srcCompat="@drawable/help" />

            <ImageButton
                android:id="@+id/imageButton15"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginRight="8dp"
                android:background="?android:attr/panelBackground"
                app:srcCompat="@drawable/about" />


        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

